--- a/index.html
+++ b/index.html
@@ -243,6 +243,12 @@
                                 <td>INVOICE REF:</td><td>{{ viewInvoiceDetails.id }}</td>
                             </tr>
                             <tr>
+                                <td>INVOICE DESC:</td><td>{{ viewInvoiceDetails.description }}</td>
+                            </tr>
+                            <tr>
+                                <td>INVOICE OFFICE:</td><td>{{ viewInvoiceDetails.office }}</td>
+                            </tr>
+                            <tr>
                                 <td>INVOICE SUPPLIER:</td><td>{{ viewInvoiceDetails.supplier }}</td>
                             </tr>
                         </table>
