--- a/index.html
+++ b/index.html
@@ -251,6 +251,15 @@
                             <tr>
                                 <td>INVOICE SUPPLIER:</td><td>{{ viewInvoiceDetails.supplier }}</td>
                             </tr>
+                             <tr>
+                                <td>INVOICE OVERHEAD:</td><td>{{ viewInvoiceDetails.overhead }}</td>
+                            </tr>
+                             <tr>
+                                <td>INVOICE AMOUNT:</td><td>{{ viewInvoiceDetails.amount }}</td>
+                            </tr>
+                             <tr>
+                                <td>INVOICE PAYMENT REF:</td><td>{{ viewInvoiceDetails.paidid }}</td>
+                            </tr>
                         </table>
                     <button class="btn btn-info" @click="supplierReview=true; addInvoice=false; payments=false; paymentsSummaryPage=false; confirmProcessPaymentsScreen=false; viewInvoiceDetails=null">
                         Back
