--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				        </div>
 				        <div class="btn-group" role="group">
 				            <div class="col-lg-6">
-								<button class="btn btn-info" @click="supplierReview=true; message=null; addInvoice=false; suppl=null; payments=false; viewInvoiceDetails=null">
+								<button class="btn btn-info" @click="updateView()">
 								    Supplier Review 
 								</button>
 				            </div>
