Modified index.html, app.js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				        </div>
 				        <div class="btn-group" role="group">
 				            <div class="col-lg-6">
-								<button class="btn btn-info" @click="updateView()">
+								<button class="btn btn-info" @click="updateView(0)">
 								    Supplier Review 
 								</button>
 				            </div>
