Modified index.html, app.js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 								</button>
 				            </div>
 				            <div class="col-lg-6">
-								<button class="btn btn-info" @click="addInvoice=true; message=null; supplierReview=false; payments=false; viewInvoiceDetails=null">
+								<button class="btn btn-info" @click="updateView(1)">
 								    Input invoices
 								</button>
 				            </div>
