--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 								</button>
 				            </div>
                             <div class="col-lg-6">
-								<button class="btn btn-info" @click="addInvoice=false; message=null; supplierReview=false; payments=true; vendorInvoices = null; viewInvoiceDetails=null">
+								<button class="btn btn-info" @click="updateView(2)">
 								    Process payments
 								</button>
 				            </div>
                             <div class="col-lg-6">
-								<button class="btn btn-info" @click="addInvoice=false; message=null; supplierReview=false; payments=false; viewInvoiceDetails=null">
+								<button class="btn btn-info" @click="updateView(4)">
 								    Main
 								</button>
 				            </div>
