--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr v-for="invoice in vendorInvoicesArray" @click="addInvoice=false; message=null; supplierReview=false; payments=false; viewInvoiceDetails = invoice ">
+                            <tr v-for="invoice in vendorInvoicesArray" @click="updateView(3)">
                                <td>{{invoice.number}}</td>
                                <td>{{invoice.id}}</td>
                                <td>{{formattedDate(invoice.date)}}</td>
