--- a/index.html
+++ b/index.html
@@ -233,6 +233,11 @@
                     <table class="mb-5">
                             <tr>
                                 <td>INVOICE #:</td><td>{{ selectedInvoice.number }}</td>
+				<td v-if="editInvoiceMode">
+					<button class="btn btn-dark" @click="editInvoiceNumber()">
+						Update
+					</button>
+				</td>
                             </tr>
                             <tr>
                                 <td>INVOICE DATE:</td><td>{{ formattedDate(selectedInvoice.date) }}</td>
