--- a/index.html
+++ b/index.html
@@ -241,6 +241,11 @@
                             </tr>
                             <tr>
                                 <td>INVOICE DATE:</td><td>{{ formattedDate(selectedInvoice.date) }}</td>
+				<td v-if="editInvoiceMode">
+					<button class="btn btn-dark" @click="editInvoiceDate()">
+						Update
+					</button>
+				</td>
                             </tr>
                             <tr>
                                 <td>INVOICE REF:</td><td>{{ selectedInvoice.id }}</td>
