Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 				<td v-else>{{ selectedInvoice.supplier }}</td>
                             </tr>
                             <tr>
-                                <td>INVOICE OVERHEAD:</td><td>{{ selectedInvoice.overhead }}</td>
+                                <td>INVOICE OVERHEAD:</td>
 				<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.overhead"></td>
 				<td v-else>{{ selectedInvoice.overhead }}</td>
                             </tr>
