--- a/index.html
+++ b/index.html
@@ -257,8 +257,7 @@
                             </tr>
                             <tr>
                                 <td>INVOICE SUPPLIER:</td>
-				<td v-if="editInvoiceMode"><input type="text" v-model="selectedInvoice.supplier"></td>
-				<td v-else>{{ selectedInvoice.supplier }}</td>
+				<td>{{ selectedInvoice.supplier }}</td>
                             </tr>
                             <tr>
                                 <td>INVOICE OVERHEAD:</td>
