--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 						Update
 					</button>
 				</td>
-				<td>{{ invoiceUpdateMessage }}</td>
+				<td class="text-danger">{{ invoiceUpdateMessage }}</td>
 			    </tr>
                         </table>
 		    	<button class="btn btn-dark" @click="editInvoiceMode=!editInvoiceMode">
