--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 				<div class="col-lg-12">
 				    <nav class="white">
 				        <div>
-				            <p class="text-center text-light display-5 p-8">
+				            <p class="text-center text-light display-5 p-8 -pb-2">
 				                Purchase ledger
 							</p>
 				        </div>
 				        <div class="btn-group" role="group">
 				            <div class="col-lg-6">
-								<button class="btn btn-info" @click="updateView(0)">
+								<button class="btn btn-info mx-1" @click="updateView(0)">
 								    Supplier Review 
 								</button>
 				            </div>
 				            <div class="col-lg-6">
-								<button class="btn btn-info" @click="updateView(1)">
+								<button class="btn btn-info mr-1" @click="updateView(1)">
 								    Input invoices
 								</button>
 				            </div>
                             <div class="col-lg-6">
-								<button class="btn btn-info" @click="updateView(2)">
+								<button class="btn btn-info mx-1" @click="updateView(2)">
 								    Process payments
 								</button>
 				            </div>
                             <div class="col-lg-6">
-								<button class="btn btn-info" @click="updateView(4)">
+								<button class="btn btn-info mx-1" @click="updateView(4)">
 								    Main
 								</button>
 				            </div>
