--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     <label>Supplier Name:</label>
                     <!--<input type="text" name="supplier" @keyup.enter="getSupplier(suppl)" v-model="suppl"></input>-->
 		    <select name="supplier" id="supplier">
-  			<option value="volvo">Volvo</option>
-  			<option value="saab">Saab</option>
-  			<option value="mercedes">Mercedes</option>
-  			<option value="audi">Audi</option>
+  			<option value="Ulreco">Ulreco</option>
+  			<option value="Etc">Etc</option>
+  			<option value="Another">Another</option>
+  			<option value="And Another">And Another</option>
 		    </select>
                     <button class="btn btn-info" @click="getSupplier()">
 				        Supplier Review 
