Modified app.js, index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div v-if="supplierReview">
                 <p class="text-center py-5">
-                    <label>Supplier Name:</label>
+                    <label>Supplier Name:</label>{{ allSuppliers }}
                     <!--<input type="text" name="supplier" @keyup.enter="getSupplier(suppl)" v-model="suppl"></input>-->
 		    <select name="supplier" id="supplier">
   			<option value="Ulreco">Ulreco</option>
