--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                     <label>Supplier Name:</label>
                     <!--<input type="text" name="supplier" @keyup.enter="getSupplier(suppl)" v-model="suppl"></input>-->
 		    <select name="supplier" id="supplier">
-			<option v-for="supplierName in allSuppliers" :value=supplierName>{{ supplierName }}</option>
+			<option v-for="supplierName in allSuppliers" v-model=supplierName>{{ supplierName }}</option>
 		    </select>
-                    <button class="btn btn-info" @click="getSupplier()">
+                    <button class="btn btn-info" @click="getSupplier(supplierName)">
 				        Supplier Review 
 				    </button>
                 </p>
